--- a/src/turbo.css
+++ b/src/turbo.css
@@ -754,6 +754,68 @@ div.botPreview > .profile{
 
 .madewith svg{ animation: spin 5s infinite linear }
 
+/* santapage */
+.ssForm{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 30px;
+}
+
+.santaForm .heading{
+  margin: auto;
+  font-size: 150%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.ssForm label{
+  margin-bottom: 10px;
+}
+
+.ssForm input, .ssForm textarea{
+  width: 100%;
+  max-width: 300px;
+}
+
+.ssForm .unfilledWarning{
+  display: none;
+  color: red;
+}
+
+.ssForm button{
+  background-color: var(--theme-active);
+  border: 1px solid #1f1f1f;
+  font-size: 110%;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.ssForm input, .ssForm textarea, .ssForm select{
+  background-color: var(--theme-active);
+  border: 1px solid #1f1f1f;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.ssForm select{
+  width: 120px;
+}
+
+.ssForm .chunk{
+  display: flex;
+  grid-gap: 20px;
+}
+
+.ssForm .chunk > input{
+  margin-left: -10px;
+}
+
+.santalogo{
+  max-width: 150px;
+  margin: auto;
+}
+
 /* Animations */
 
 @keyframes delayedFadeIn {
@@ -925,3 +987,4 @@ div.botPreview > .profile{
       padding: 1px;
     }
 }
+
